homelab-gitops/apps/wikijs/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: wikijs
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wiki.thundertest.org
      secretName: wikijs-tls
  rules:
    - host: wiki.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  number: 80
